fixed an issue with the mobile display the buttons on the main hero were touching each other on small screens

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -77,6 +77,11 @@ section {
   justify-content: space-between;
   width: 60%;
 }
+@media (max-width: 600px) {
+  .button-holder {
+    width: 80vw;
+  }
+}
 
 .resume-btn {
   display: flex;
